--- a/index.html
+++ b/index.html
@@ -185,22 +185,23 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Hi, I'm Sanjog Kumar Mehta — a dedicated freelancer and web designer with a strong focus on creating high-quality, responsive websites and apps. I specialize in both frontend and backend development, ensuring seamless functionality and user experience. Known for being a research-driven professional and a good listener, I prioritize understanding client needs to deliver tailored digital solutions that truly stand out.</p>
+		            <p>Hi, I'm Sanjog Kumar Mehta a dedicated freelancer and web designer specializing in responsive, high-performance websites and web apps. I work across both frontend and backend, ensuring seamless functionality, clean design, and a smooth user experience.
+
+I'm research-driven, detail-oriented, and always focused on understanding client needs. Known as a good listener and clear communicator, I make it a priority to deliver custom solutions that are not only visually impressive but also built to perform.
+
+If you’re looking for a reliable developer who combines technical skill with a thoughtful, user-first approach — let’s connect.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Sanjog Kumar Mehta</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>January 23, 2003</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>Inaruwa Sunsari Nepal</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Inaruwa, Sunsari, Nepal</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>sanjogmehta8@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+977 9746957682ss</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+977 9746957682</span></li>
 		            </ul>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-              	<p class="mb-4">
-	                <span class="number" data-number="10+">0</span>
-	                <span>Project complete</span>
-                </p>
+              	
                 <p><a href="https://drive.google.com/file/d/1t8JmjObQociJ-c7_vBmq6-LP91pEdFDb/view?usp=share_link" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
@@ -597,7 +598,7 @@ Hi, I'm Sanjog Kumar Mehta – a passionate freelancer and web designer with a k
               <ul class="list-unstyled">
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>UI and UX Design</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
               </ul>
