--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/111.png);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/ddd.png);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -442,7 +442,7 @@ If you’re looking for a reliable developer who combines technical skill with a
       <!-- Library Management System -->
       <div class="col-md-6 mb-4">
         <div class="project img ftco-animate d-flex justify-content-center align-items-center position-relative"
-             style="background-image: url('images/library.jpeg');">
+             style="background-image: url('images/Library.jpeg');">
           <a href="#" class="project-link-icon" target="_blank" title="View Project">
             <img src="https://img.icons8.com/material-outlined/24/ffffff/link--v1.png" alt="Link Icon" />
           </a>
@@ -484,7 +484,7 @@ If you’re looking for a reliable developer who combines technical skill with a
       <!-- Hotel Management System -->
       <div class="col-md-6 mb-4">
         <div class="project img ftco-animate d-flex justify-content-center align-items-center position-relative"
-             style="background-image: url('images/hotel.jpg');">
+             style="background-image: url('images/Hotel.jpg');">
           <a href="#" class="project-link-icon" target="_blank" title="View Project">
             <img src="https://img.icons8.com/material-outlined/24/ffffff/link--v1.png" alt="Link Icon" />
           </a>
